Test invalid use of PartitionsBuilder